--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Codecademy</h2>
-          <p>Mein Profil bei Codecadamy:</p>
+          <h2>CodeCademy</h2>
+          <p>Mein Profil bei CodeCadamy:</p>
           <p><a class="btn btn-default" href="http://www.codecademy.com/NMittler" role="button">NMittler &raquo;</a></p>
         </div>
         <div class="col-md-4">
@@ -107,21 +107,12 @@
 	  <div class="carousel-inner">
 	    <div class="item active">
 	      <img src="pics/pic0.gif" alt="...">
-	      <div class="carousel-caption">
-	          <h3>Caption Text</h3>
-	      </div>
 	    </div>
 	    <div class="item">
 	      <img src="pics/pic1.gif" alt="...">
-    	  <div class="carousel-caption">
-    	      <h3>Caption Text</h3>
-    	  </div>
     	</div>
     	<div class="item">
     	  <img src="pics/pic2.gif" alt="...">
-    	  <div class="carousel-caption">
-    	      <h3>Caption Text</h3>
-    		  </div>
     	</div>
   </div>
  	
