--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner">
 	    <div class="item active">
-	      <img src="pics/pic0.gif" alt="...">
+	      <img src="pics/pic0.JPG" alt="...">
 	    </div>
 	    <div class="item">
-	      <img src="pics/pic1.gif" alt="...">
+	      <img src="pics/pic1.JPG" alt="...">
     	</div>
     	<div class="item">
-    	  <img src="pics/pic2.gif" alt="...">
+    	  <img src="pics/pic2.JPG" alt="...">
     	</div>
   </div>
  	
