bugfixes label and footer

--- a/impress.html
+++ b/impress.html
@@ -98,7 +98,7 @@
   </div>
 </div>
         
-
+    <div class="container"> <!-- Saares: Container hinzugefügt damit der Footer richtig skaliert ist. -->
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
